renamed github action from master to main

--- a/auth/.github/workflow/auth.yml
+++ b/auth/.github/workflow/auth.yml
@@ -3,14 +3,14 @@ name: Auth Service CI/CD Pipeline
 on:
   push:
     branches:
-      - master
+      - main
       - develop
     paths:
       - 'auth/**'
       - '.github/workflows/auth.yml'
   pull_request:
     branches:
-      - master
+      - main
       - develop
     paths:
       - 'auth/**'
