--- a/auth/.github/workflows/auth.yml
+++ b/auth/.github/workflows/auth.yml
@@ -4,12 +4,14 @@ on:
   push:
     branches:
       - main
+      - master
     paths:
       - 'auth/**'
       - '.github/workflows/auth.yml'
   pull_request:
     branches:
       - main
+      - master
     paths:
       - 'auth/**'
 
