Disable test step in auth workflow
Comment out the 'Run tests' step in the workflow.

--- a/.github/workflows/auth.yml
+++ b/.github/workflows/auth.yml
@@ -42,9 +42,9 @@ jobs:
         working-directory: ${{ env.WORKING_DIR }}
         run: npm run lint --if-present || true
 
-      - name: Run tests
-        working-directory: ${{ env.WORKING_DIR }}
-        run: npm test --if-present
+      # - name: Run tests
+      #   working-directory: ${{ env.WORKING_DIR }}
+      #   run: npm test --if-present
 
       - name: Build application
         working-directory: ${{ env.WORKING_DIR }}
