--- a/.github/workflows/auth.yml
+++ b/.github/workflows/auth.yml
@@ -20,7 +20,7 @@ env:
 jobs:
   build:
     name: Build and Test
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
