--- a/.github/workflows/auth.yml
+++ b/.github/workflows/auth.yml
@@ -80,6 +80,7 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
           args: >
+            -Dsonar.nodejs.forceHost=true
             -Dsonar.projectKey=adajesus_msticket
             -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }}
             -Dsonar.sources=auth/src
