--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -38,7 +38,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: npm
+          cache: 'npm'
+          cache-dependency-path: '${{ env.WORKING_DIR }}/package-lock.json'
 
       # --- INSTALL DEPENDENCIES ---
       - name: Install dependencies
