--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
     "dev": "next dev",
     "build": "next build --webpack",
     "start": "next start",
-    "test": "jest --coverage"
+    "test": "jest --coverage --passWithNoTests"
   },
   "keywords": [],
   "author": "",
