--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -66,21 +66,39 @@ jobs:
             -Dsonar.javascript.lcov.reportPaths=client/coverage/lcov.info
             -Dsonar.verbose=true
 
-      # --- SECURITY SCANS ---
-      - name: Snyk Dependency Scan
-        working-directory: ./client   # <<< FIXED
-        run: npx snyk test
+             --- SECURITY SCANS ---
+
+      - name: Snyk Dependency Scan (Open Source)
+        uses: snyk/actions/node@master  # official, maintained; pins to latest or use @0.4.0 for stability
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-      - name: Snyk Code Scan (SAST)
-        working-directory: ./client
-        run: npx snyk code test
+        with:
+          command: test
+          args: --severity-threshold=high  
+        continue-on-error: true  
+
+      - name: Snyk Code Scan (SAST / Static Analysis)
+        uses: snyk/actions/node@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          command: code test
+          args: --sarif-file-output=snyk-code.sarif  
+        continue-on-error: true
+
+      
+      - name: Upload Snyk Code SARIF to GitHub
+        if: always()  # run even if previous step fails
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: ./client/snyk-code.sarif  # adjust path if needed
+          wait-for-processing: true
 
       - name: Detect unused dependencies (depcheck)
-        working-directory: ./client   # <<< FIXED
-        run: npx depcheck
+        working-directory: ${{ env.WORKING_DIR }}  # or ./client
+        run: |
+          npx depcheck --ignores="eslint,prettier,typescript,@types/*"  # optional: ignore common dev tools
+          # or just: npx depcheck
 
       # --- BUILD APPLICATION ---
       - name: Build application
