--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -66,33 +66,26 @@ jobs:
             -Dsonar.javascript.lcov.reportPaths=client/coverage/lcov.info
             -Dsonar.verbose=true
 
-             --- SECURITY SCANS ---
-
-      - name: Snyk Dependency Scan (Open Source)
-        uses: snyk/actions/node@master  # official, maintained; pins to latest or use @0.4.0 for stability
+        # --- SECURITY SCANS ---
+      - name: Snyk Dependency Scan
+        uses: snyk/actions/node@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           command: test
-          args: --severity-threshold=high  
-        continue-on-error: true  
-
-      - name: Snyk Code Scan (SAST / Static Analysis)
+          args: --severity-threshold=high
+      - name: Snyk Code Scan (SAST)
         uses: snyk/actions/node@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           command: code test
-          args: --sarif-file-output=snyk-code.sarif  
-        continue-on-error: true
-
-      
-      - name: Upload Snyk Code SARIF to GitHub
-        if: always()  # run even if previous step fails
-        uses: github/codeql-action/upload-sarif@v3
+          args: --sarif-file-output=snyk-code.sarif
+      - name: Upload Snyk Code SARIF
+        if: always() && hashFiles('./client/snyk-code.sarif') != ''
+        uses: github/codeql-action/upload-sarif@v4  # upgrade to v4
         with:
-          sarif_file: ./client/snyk-code.sarif  # adjust path if needed
-          wait-for-processing: true
+         sarif_file: ./client/snyk-code.sarif
 
       - name: Detect unused dependencies (depcheck)
         working-directory: ${{ env.WORKING_DIR }}  # or ./client
