--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -66,21 +66,27 @@ jobs:
             -Dsonar.javascript.lcov.reportPaths=client/coverage/lcov.info
             -Dsonar.verbose=true
 
-        # --- SECURITY SCANS ---
       - name: Snyk Dependency Scan
         uses: snyk/actions/node@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          command: test
-          args: --severity-threshold=high
+         command: test
+         args: --file=client/package.json --severity-threshold=high
+        continue-on-error: true
+
+# snyk code scan
       - name: Snyk Code Scan (SAST)
+        working-directory: ${{ env.WORKING_DIR }}
         uses: snyk/actions/node@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           command: code test
           args: --sarif-file-output=snyk-code.sarif
+        continue-on-error: true
+
+
       - name: Upload Snyk Code SARIF
         if: always() && hashFiles('./client/snyk-code.sarif') != ''
         uses: github/codeql-action/upload-sarif@v4  # upgrade to v4
