--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -112,37 +112,38 @@ jobs:
             client/package.json
 
   docker:
-    name: Build & Push Docker Image
-    runs-on: ubuntu-latest
-    needs: ci
+     name: Build & Push Docker Image
+     runs-on: ubuntu-latest
+     needs: ci
 
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+     steps:
+       - name: Checkout repo
+         uses: actions/checkout@v4
 
-      - name: Download build artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: node-app
+       - name: Download build artifact
+         uses: actions/download-artifact@v4
+         with:
+           name: node-app
+           path: ./client   # place contents in ./client
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+       - name: Login to Docker Hub
+         uses: docker/login-action@v3
+         with:
+           username: ${{ secrets.DOCKER_HUB_USERNAME }}
+           password: ${{ secrets.DOCKER_HUB_TOKEN }}
+           logout: true
 
-      - name: Build Docker image
-        run: |
-          docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/client-service:${{ github.sha }} ./client   # <<< FIXED path to client
+       - name: Build Docker image
+         run: |
+           docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/client-service:${{ github.sha }} ./client
 
-      - name: Trivy Image Scan
-        uses: aquasecurity/trivy-action@master
-        with:
+       - name: Trivy Image Scan
+         uses: aquasecurity/trivy-action@master
+         with:
           image-ref: ${{ secrets.DOCKER_HUB_USERNAME }}/client-service:${{ github.sha }}
           severity: CRITICAL,HIGH
-          exit-code: 1
+          exit-code: 1   
 
-      - name: Push Docker image
-        run: |
-          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/client-service:${{ github.sha }}   # <<< FIXED image name
-
+       - name: Push Docker image
+         run: |
+          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/client-service:${{ github.sha }}
