--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:18-alpine AS builder
+FROM node:20-alpine AS builder
 
 WORKDIR /app
 COPY package.json package-lock.json ./
@@ -7,12 +7,18 @@ RUN npm ci
 COPY . .
 RUN npm run build
 
-FROM node:18-alpine
+FROM node:20-alpine
 
 WORKDIR /app
-COPY --from=builder /app/dist ./dist
+COPY --from=builder /app/next.config.* ./
+COPY --from=builder /app/public ./public
+COPY --from=builder /app/.next ./.next
 COPY --from=builder /app/node_modules ./node_modules
-COPY package.json .
+COPY --from=builder /app/package.json ./package.json
+
+
+ENV NODE_ENV=production
 
 EXPOSE 3000
-CMD ["node", "dist/index.js"]
+CMD ["npm", "start"]
+
