--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -143,7 +143,8 @@ jobs:
           image-ref: ${{ secrets.DOCKER_HUB_USERNAME }}/client-service:${{ github.sha }}
           severity: CRITICAL,HIGH
           exit-code: 1   
-
+          ignore-unfixed: true
+          
        - name: Push Docker image
          run: |
           docker push ${{ secrets.DOCKER_HUB_USERNAME }}/client-service:${{ github.sha }}
