--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build --webpack",
     "start": "next start",
     "test": "jest --coverage --passWithNoTests"
   },
@@ -11,25 +11,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.7.7",                   
-    "bootstrap": "^5.3.3",                
-    "next": "^15.0.0",                    
-    "prop-types": "^15.8.1",              
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-stripe-checkout": "^2.6.3"    
+    "axios": "^1.4.0",
+    "bootstrap": "^5.3.3",
+    "next": "^16.0.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-stripe-checkout": "^2.6.3"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.5.0",
-    "@testing-library/react": "^16.0.1",
-    "babel-jest": "^29.7.0",             
-    "jest": "^29.7.0",                    
-    "jest-environment-jsdom": "^29.7.0"   
-  },
-  "overrides": {
-    "cross-spawn": "^7.0.5",              
-    "glob": "^10.4.5",                    
-    "tar": "^6.2.1"                       
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
+    "babel-jest": "^30.2.0",
+    "jest": "^30.2.0"
   }
+
 }
 
