--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -141,10 +141,10 @@ jobs:
          uses: aquasecurity/trivy-action@master
          with:
           image-ref: ${{ secrets.DOCKER_HUB_USERNAME }}/client-service:${{ github.sha }}
-          severity: CRITICAL,HIGH
+          severity: CRITICAL
           exit-code: 1   
           ignore-unfixed: true
-          
+
        - name: Push Docker image
          run: |
           docker push ${{ secrets.DOCKER_HUB_USERNAME }}/client-service:${{ github.sha }}
