--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -1,8 +1,12 @@
 FROM node:alpine
 
 WORKDIR /app
-COPY package.json .
+COPY package.json ./
 RUN npm install --omit=dev
 COPY . .
+RUN npm run build
 
-CMD ["npm", "start"]
+EXPOSE 3000
+
+# Run compiled JS
+CMD ["node", "dist/index.js"]
